--- a/sample_app/templates/base.html
+++ b/sample_app/templates/base.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Home</title>
+    <title>Credibility Checker</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,14 +19,14 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Photo Verification App</a>
+      <a class="navbar-brand" href="#">Credibility Checker</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       {% if page_type == "task" %}
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="{%url 'sample_app:task_list' %}">All Tasks</a>
+            <a href="{%url 'sample_app:task_list' %}"><button class="btn btn-outline-success" type="button">All Tasks</button></a>
             <a href="{%url 'sample_app:create_task' %}"><button class="btn btn-outline-success" type="button">New Task</button></a>
           </div>
         </div>
