--- a/sample_app/templates/create_response.html
+++ b/sample_app/templates/create_response.html
@@ -26,8 +26,8 @@
 
                     <div class="form-group row">
                         <div class="col-sm-1"></div>
-                        <label for="img_url" class="col-sm-1 font-weight-bold">Image URL</label>
-                        <span>{{ task.img_url }}</span>
+                        <label for="src_url" class="col-sm-1 font-weight-bold">Source URL</label>
+                        <span>{{ task.src_url }}</span>
                         <div class="col-sm-1"></div>
                     </div>
 
@@ -49,30 +49,6 @@
                             <label for="username" class="font-weight-bold">What is your username?</label>
                             <div class="col-6">
                                 <input type="text" class="form-control" id="username" placeholder="Enter your username for QuriOSINTy" required>
-                            </div>
-                            <div class="col-sm-2"></div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-2"></div>
-                            <label for="ans1" class="font-weight-bold">Question 1: {{ task.q1 }}</label>
-                            <div class="col-6">
-                                <input type="text" class="form-control" id="ans1" placeholder="Enter your answer" required>
-                            </div>
-                            <div class="col-sm-2"></div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-2"></div>
-                            <label for="ans2" class="font-weight-bold">Question 2: {{ task.q2 }}</label>
-                            <div class="col-6">
-                                <input type="text" class="form-control" id="ans2" placeholder="Enter your answer">
-                            </div>
-                            <div class="col-sm-2"></div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-2"></div>
-                            <label for="ans3" class="font-weight-bold">Question 3: {{ task.q3 }}</label>
-                            <div class="col-6">
-                                <input type="text" class="form-control" id="ans3" placeholder="Enter your answer">
                             </div>
                             <div class="col-sm-2"></div>
                         </div>
