--- a/sample_app/templates/create_task.html
+++ b/sample_app/templates/create_task.html
@@ -36,56 +36,9 @@
 
                     <div class="form-group row">
                         <div class="col-sm-1"></div>
-                        <label for="time_estimate" class="col-sm-1 col-form-label font-weight-bold">Time Estimate</label>
+                        <label for="src_url" class="col-sm-1 col-form-label font-weight-bold">Source URL</label>
                         <div class="col">
-                        <input type="text" class="form-control" id="time_estimate" placeholder="Specify how many minutes it will take to complete your task" required>
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-1"></div>
-                        <label for="img_url" class="col-sm-1 col-form-label font-weight-bold">Image URL</label>
-                        <div class="col">
-                            <input type="text" class="form-control" id="img_url" placeholder="Enter the URL for your image here" required>
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-1"></div>
-                        <div class="col">
-                            <div class="image-preview" id="imagePreview">
-                                <img src="" alt="" class="image-preview__image" id="previewImage">
-                            </div>
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-                    
-                    
-                    <h5>Enter up to 3 questions to ask:</h5>
-                    <br>
-                    <div class="form-group row">
-                        <div class="col-sm-1"></div>
-                        <label for="q1" class="col-sm-1 col-form-label font-weight-bold">Question 1</label>
-                        <div class="col">
-                            <input type="text" class="form-control" id="q1" placeholder="Enter your first question (required)" required>
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-1"></div>
-                        <label for="q2" class="col-sm-1 col-form-label font-weight-bold">Question 2</label>
-                        <div class="col">
-                            <input type="text" class="form-control" id="q2" placeholder="Enter your second question (optional)">
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-1"></div>
-                        <label for="q3" class="col-sm-1 col-form-label font-weight-bold">Question 3</label>
-                        <div class="col">
-                            <input type="text" class="form-control" id="q3" placeholder="Enter your third question (optional)">
+                            <input type="text" class="form-control" id="src_url" placeholder="Enter the URL for your source here" required>
                         </div>
                         <div class="col-sm-1"></div>
                     </div>
