--- a/sample_app/templates/task_details.html
+++ b/sample_app/templates/task_details.html
@@ -20,21 +20,10 @@
                 <fieldset>
                     <div class="form-group row">
                         <div class="col-sm-1"></div>
-                        <label for="img_url" class="col-sm-1 font-weight-bold">Image URL</label>
-                        <span>{{ task.img_url }}</span>
+                        <label for="src_url" class="col-sm-1 font-weight-bold">Source URL</label>
+                        <span>{{ task.src_url }}</span>
                         <div class="col-sm-1"></div>
                     </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-1"></div>
-                        <div class="col">
-                            <div class="image-preview" id="imagePreview">
-                                <img src="{{ task.img_url }}" alt="" class="image-preview__image" id="previewImage" style="max-width:300px; max-height:300px;">
-                            </div>
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-                    
                     
                     <h5>Your 3 questions:</h5>
                     <br>
