--- a/sample_app/templates/tasks.html
+++ b/sample_app/templates/tasks.html
@@ -10,15 +10,15 @@
             
             <div class="col">
                 <h3>
-                    All My Tasks
+                    All Flags
                 </h3>
                 <fieldset>
                     <div class="table-width">
                         <table class="task-response-table" id="task_response_table">
                             <thead>
                             <tr>
-                                <th scope="col">Task ID</th>
-                                <th scope="col">Task Name</th>
+                                <th scope="col">Flag ID</th>
+                                <th scope="col">Flag Name</th>
                                 <th scope="col">Description</th>
                                 <th scope="col">Completed Responses</th>
                                 <th scope="col">Requested Responses</th>
