--- a/sample_app/templates/response_details.html
+++ b/sample_app/templates/response_details.html
@@ -10,9 +10,9 @@
             
             <div class="col">
                 <h3>
-                    <a href="{% url 'sample_app:task_details' task.id %}">Task {{ task.id }}</a>: {{ task.name }}
+                    <a href="{% url 'sample_app:task_details' task.id %}">Flag {{ task.id }}</a>: {{ task.name }}
                 </h3>
-                <h5>Task Status: {{ task.status }} </h5> 
+                <h5>Flag Status: {{ task.status }} </h5> 
                 <h5>Date Created: {{ task.date_created }} </h5>
                 <h5>Created By: {{ task.created_by }} </h5>
                 <!-- <button class="btn btn-danger">Close Task</button> -->
