--- a/sample_app/templates/task_details.html
+++ b/sample_app/templates/task_details.html
@@ -33,7 +33,7 @@
                         <label for="response_url" class="col-sm-2 font-weight-bold">Response URL</label>
                         <span class=""><a href="{% url 'sample_app:create_response' task.id %}">{{ request.get_host }}{% url 'sample_app:create_response' task.id %}</a></span>
                         <div class="col-sm-6">
-                            {% if task.status == "Closed" %}<span>Note: Your task is closed.</span>{% endif %}
+                            {% if task.status == "Closed" %}<span>Note: Your flag is closed.</span>{% endif %}
                             {% if responses_allowed == False %}<span>Note: All requested responses have been submitted.</span>{% endif %}
                         </div>
                     </div>
