Hosted on heroku, connecting to API, response edit

--- a/sample_app/templates/response_details.html
+++ b/sample_app/templates/response_details.html
@@ -23,6 +23,7 @@
                 <h5>Response Status: {{ response.status }} </h5>
                 <h5>Created By: {{ response.created_by }} </h5>
                 <h5>Date created: {{ response.date_created }} </h5>
+                <h5>Crediblity: {{response.description}}
                 <br>
                 <br>
                 <div class="row">
