--- a/sample_app/templates/create_task.html
+++ b/sample_app/templates/create_task.html
@@ -33,6 +33,15 @@
                         </div>
                         <div class="col-sm-1"></div>
                     </div>
+                    
+                    <div class="form-group row">
+                        <div class="col-sm-1"></div>
+                        <label for="time_estimate" class="col-sm-1 col-form-label font-weight-bold">Time Estimate</label>
+                        <div class="col">
+                        <input type="text" class="form-control" id="time_estimate" placeholder="Specify how many minutes it will take to complete your task" required>
+                        </div>
+                        <div class="col-sm-1"></div>
+                    </div>
 
                     <div class="form-group row">
                         <div class="col-sm-1"></div>
