JS files updated to newest sample app update

--- a/sample_app/templates/create_task.html
+++ b/sample_app/templates/create_task.html
@@ -13,12 +13,12 @@
                 <form method="POST" id="create_task_form">
                     {% csrf_token %}
                         <h3>
-                            Create Your Flag
+                            Create Your Task
                         </h3>
                 <fieldset>
                     <div class="form-group row">
                         <div class="col-sm-1"></div>
-                        <label for="task_name" class="col-sm-1 col-form-label font-weight-bold">Flag Name</label>
+                        <label for="task_name" class="col-sm-1 col-form-label font-weight-bold">Task Name</label>
                         <div class="col">
                         <input type="text" class="form-control" id="task_name" placeholder="Use a name that is easy to recognize" required>
                         </div>
@@ -27,9 +27,18 @@
 
                     <div class="form-group row">
                         <div class="col-sm-1"></div>
-                        <label for="task_description" class="col-sm-1 col-form-label font-weight-bold">Flag Description</label>
+                        <label for="task_description" class="col-sm-1 col-form-label font-weight-bold">Task Description</label>
                         <div class="col">
                         <input type="text" class="form-control" id="task_description" placeholder="Describe what your task involves" required>
+                        </div>
+                        <div class="col-sm-1"></div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-sm-1"></div>
+                        <label for="time_estimate" class="col-sm-1 col-form-label font-weight-bold">Time Estimate</label>
+                        <div class="col">
+                        <input type="text" class="form-control" id="time_estimate" placeholder="Specify how many minutes it will take to complete your task" required>
                         </div>
                         <div class="col-sm-1"></div>
                     </div>
