--- a/sample_app/templates/base.html
+++ b/sample_app/templates/base.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a href="{%url 'sample_app:task_list' %}"><button class="btn btn-outline-success" type="button">All Flags</button></a>
-            <a href="{%url 'sample_app:create_task' %}"><button class="btn btn-outline-success" type="button">New Flag</button></a>
+            <!-- <a href="{%url 'sample_app:create_task' %}"><button class="btn btn-outline-success" type="button">New Flag</button></a> -->
           </div>
         </div>
       {% endif %}
