front end update to tasks, fix src_url bug

--- a/sample_app/templates/task_details.html
+++ b/sample_app/templates/task_details.html
@@ -11,7 +11,7 @@
             
             <div class="col">
                 <h3>
-                    Flag {{ task.id }}: {{ task.name }}
+                    Task {{ task.id }}: {{ task.name }}
                 </h3>
                 <h5>Status: {{ task.status }}</h5> 
                 <h5>Date Created: {{ task.date_created }}</h5>
