--- a/sample_app/templates/task_details.html
+++ b/sample_app/templates/task_details.html
@@ -67,7 +67,7 @@
                             <tbody>
                             {% for response in responses %}
                                 <tr>
-                                    <td scope="row">{{ response.id }} <a href="{% url 'sample_app:response_details' task.id response.id %}"><i class="primary fas fa-external-link-alt"></i></a></td>
+                                    <td scope="row">{{ response.id }} <a href="{% url 'sample_app:response_details' %}?token={{ token }}&event={{ event }}&task={{ task.id }}&response={{ response.id }}&tool={{ tool }}"><i class="primary fas fa-external-link-alt"></i></a></td>
                                     <td>{{ response.ans1 }}</td>
                                     <td>{{ response.created_by }}</td>
                                     <td>{{ response.date_created }}</td>
