--- a/sample_app/templates/base.html
+++ b/sample_app/templates/base.html
@@ -19,15 +19,15 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Credibility Checker</a>
+      <a class="navbar-brand" href="#">Credibility Checker</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       {% if page_type == "task" %}
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a href="{%url 'sample_app:task_list' %}"><button class="btn btn-outline-success" type="button">All Flags</button></a>
-            <!-- <a href="{%url 'sample_app:create_task' %}"><button class="btn btn-outline-success" type="button">New Flag</button></a> -->
+            <a class="nav-item nav-link active" href="{%url 'sample_app:task_list' %}">All Tasks</a>
+            <!-- <a href="{%url 'sample_app:create_task' %}"><button class="btn btn-outline-success" type="button">New Task</button></a> -->
           </div>
         </div>
       {% endif %}
