Task view update

--- a/sample_app/templates/task_details.html
+++ b/sample_app/templates/task_details.html
@@ -58,7 +58,8 @@
                             <thead>
                             <tr>
                                 <th scope="col">Response ID</th>
-                                <th scope="col">Response - Q1</th>
+                                <th scope="col">Credibility response</th>
+                                <th scope="col">Other source</th>
                                 <th scope="col">Created By</th>
                                 <th scope="col">Date Created</th>
                                 <th scope="col">Status</th>
