Fixed viewing response bug

--- a/sample_app/templates/response_details.html
+++ b/sample_app/templates/response_details.html
@@ -10,13 +10,13 @@
             
             <div class="col">
                 <h3>
-                    <a href="{% url 'sample_app:task_details' task.id %}">Flag {{ task.id }}</a>: {{ task.name }}
+                    <a href="">Task {{ task.id }}</a>: {{ task.name }}
                 </h3>
                 <h5>Flag Status: {{ task.status }} </h5> 
                 <h5>Date Created: {{ task.date_created }} </h5>
                 <h5>Created By: {{ task.created_by }} </h5>
                 <!-- <button class="btn btn-danger">Close Task</button> -->
-                <hr><hr>    
+                <hr>   
                 <h3>
                     Response {{ response.id }}
                 </h3>
